# spell_book_api

./: Dockerfile  main.py  pyproject.toml
models/: spell.py
myenv/: pyvenv.cfg
routes/: spells.py
