[tool.poetry]
name = "spells-book"
version = "0.1.0"
description = ""
authors = ["breznovic <slymarkel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
